--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "jalali-moment": "^3.3.10",
+    "jdate": "0.0.2",
     "json-server": "^0.16.3",
     "jss-rtl": "^0.3.0",
     "node-sass": "^6.0.1",
