--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,17 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/date-fns-jalali": "^2.11.0",
+    "@date-io/jalaali": "^1.3.13",
+    "@date-io/moment": "^2.11.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.33",
+    "@material-ui/pickers": "^3.3.10",
     "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "jalali-moment": "^3.3.10",
+    "date-fns": "^2.23.0",
+    "date-fns-jalali": "^2.23.0-0",
+    "jalali-react-datepicker": "^1.2.1",
     "jdate": "0.0.2",
     "json-server": "^0.16.3",
     "jss-rtl": "^0.3.0",
+    "moment": "^2.29.1",
+    "moment-jalaali": "^0.9.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
